# paper_check_agent

./: .gitignore  README.md  一键停止.ps1  一键导入离线镜像.ps1  一键离线部署.ps1  一键部署.ps1  一键配置虚拟环境.ps1
app/: .dockerignore  .env.docker  .env.example  .env.platform.example  Dockerfile  LICENSE  README.md  dify_api.example.md  docker-compose.offline.yml  docker-compose.platform.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/article_check/: __init__.py  dify_review.py  runtime.py
app/article_check/claims/: __init__.py  verifier.py
app/article_check/config/: __init__.py  settings.py
app/article_check/context/: __init__.py  cache_bus.py  curation.py
app/article_check/core/: kvpool.py  polykv.py  pool.py
app/article_check/curator/: __init__.py  orchestrator_v2.py
app/article_check/layers/: __init__.py  audit_layer.py  parse_layer.py  verification_layer.py
app/article_check/llm/: __init__.py
app/article_check/mcp/: __init__.py
app/dify_dsl/: README.md  articlecheck_component_classification_workflow.yml  articlecheck_document_read_workflow.yml  articlecheck_format_review_workflow.yml  articlecheck_hallucination_review_workflow.yml  articlecheck_reference_verify_workflow.yml  articlecheck_report_generation_workflow.yml  articlecheck_report_qa_workflow.yml  文本情感分析工作流.yml
app/nginx/: default.conf.template
app/scripts/: extract_component_fonts.py  run_full_regression.py
app/北师大论文格式要求/: 1. 北京师范大学研究生学位论文编写规则（2026版）.txt  bnu_graduate_requirement_rule_profile.json  bnu_undergraduate_template_rule_profile.json  北京师范大学本科生学术论文规范.txt
镜像包/: README.md  (+1 more)
(+66 files in other folders)
